--- a/config/application.properties
+++ b/config/application.properties
@@ -12,5 +12,12 @@ app.name=DM-BigData
 app.work-dir=/dmbigdatadir
 # app.spark-master=spark://Elgsylvin85sAir:7077
 app.spark-master=local[*]
+app.spark-join-partitions=512
 # app.spark-master=local[1]
 app.hadoop-namenode=hdfs://localhost:9000
+spark.network.timeout=10000000
+spark.sql.shuffle.partitions=512
+spark.executor.heartbeatInterval=10000000
+spark.driver.memory=150g
+spark.executor.memory=50g
+
